--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,18 @@
 body {
 
-    background-image: url(../img/Vecteur.png);
-    background-repeat: no-repeat;
+    background: url(../img/bg.bmp) no-repeat center fixed;
+    background-size:100% auto;  
+    background-position: ;
+    
 }
 
 #title {
     height: 50px;
     font-size: 3em;
+    font-weight: bold;
     text-align: center;
-    color: crimson;
-    /*    border: 2px solid black;*/
+    text-shadow: 20px 0px 9px #777;
+    color: crimson;    
 }
 
 #container {
@@ -33,35 +36,54 @@ body {
 
 #region {
     float: right;
-    height: 70px;
-    border: 2px solid black;
+     
+    height: 55px;
+    margin-bottom: 10px;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Flag_of_Pays-de-la-Loire.svg/720px-Flag_of_Pays-de-la-Loire.svg.png");
+    background-repeat: no-repeat;
+    background-size:100% auto;  
+    box-shadow: 6px 6px 56px black;
 
 }
 
 #box_one {
-    border: 2px solid black;
+    border: 1px solid black;
+    border-radius: 10px;
     height: 250px;
     margin-bottom: 10px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 6px 6px 56px black;
 }
 
 #box_two {
-    border: 2px solid black;
+    border: 1px solid black;
+    border-radius: 10px;
     height: 250px;
     margin-bottom: 10px;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 6px 6px 56px black;
 }
 
 #box_three {
-    border: 2px solid black;
+    border: 1px solid black;
+    border-radius: 10px;
     height: 250px;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 6px 6px 56px black;
 }
 
 #box_four {
-    border: 2px solid black;
+    border: 1px solid black;
+    border-radius: 10px;
     height: 250px;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 6px 6px 56px black;
 }
 
 #box_tchat {
-    border: 2px solid black;
+    border: 1px solid black;
+    border-radius: 10px;
     height: 250px;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 6px 6px 56px black;
 }
