--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 
-    background: url(../img/bg.bmp) no-repeat center fixed;
+    background: url(../img/Vecteur.png) no-repeat center fixed;
     background-size: 100% auto;
     background-position: ;
 
@@ -49,7 +49,8 @@ body {
 #box_one {
     border: 1px solid black;
     border-radius: 10px;
-    height: 250px;
+    height: auto;
+    padding: 15px;
     margin-bottom: 10px;
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 6px 6px 56px black;
