--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,9 @@ body {
 }
 
 #block_region {
+    /*    margin-top: 10px;*/
     text-align: center;
     padding: 5px;
-    margin-bottom: 15px;
-    margin-top: 25px;
     border: 1px solid black;
     border-radius: 10px;
     height: auto;
@@ -53,7 +52,6 @@ body {
     border: 1px solid black;
     border-radius: 10px;
     height: auto;
-    margin-left: 15px;
     padding: 20px;
     margin-bottom: 10px;
     background-color: rgba(255, 255, 255, 0.9);
