modif by visual code

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* je teste git hub  */
+
 body {
     background: url(../img/Vecteur.png) no-repeat center fixed;
     background-size: 100% auto;
@@ -20,7 +22,7 @@ body {
 }
 
 #block_region {
-    /*    margin-top: 10px;*/
+    margin-top: 60px;
     text-align: center;
     padding: 5px;
     border: 1px solid black;
